--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@ limitations under the License.
 
     <!-- application information -->
     <property name="app.name" value="searchable" />
-    <property name="app.version" value="0.3.0" />
+    <property name="app.version" value="0.4.0" />
 
     <!-- The base directory for distribution targets -->
     <property name="dist.dir" value="dist/" />
@@ -89,7 +89,7 @@ limitations under the License.
             <zipfileset dir="${src.dir}" prefix="${app.name}-${app.version}/src" />
             <zipfileset dir="${doc.dir}" prefix="${app.name}-${app.version}/doc" />
             <zipfileset dir="${lib.build}" prefix="${app.name}-${app.version}/lib" />
-            <zipfileset dir="${dist.dir}" prefix="${app.name}-${app.version}/dist" />
+            <zipfileset dir="${dist.dir}" prefix="${app.name}-${app.version}" />
             <zipfileset dir="." includes="build.xml" prefix="${app.name}-${app.version}" />
         </zip>
     </target>
