first pass at integrated Solr indexing support
git-svn-id: http://svn.mojodna.net/repository/searchable/trunk@684 43f9e6a5-3c06-0410-9c50-a813a83a72d6

--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,9 @@
 	<classpathentry kind="lib" path="lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/highlighter.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jdom-1.0.jar"/>
+	<classpathentry kind="src" path="src/test"/>
+	<classpathentry kind="lib" path="lib/junit-3.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
