--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <!--
-Copyright 2005-2006 Seth Fitzsimmons <seth@note.amherst.edu>
+Copyright 2005-2006 Seth Fitzsimmons <seth@mojodna.net>
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -33,7 +33,7 @@ limitations under the License.
 
     <!-- application information -->
     <property name="app.name" value="searchable" />
-    <property name="app.version" value="0.7.0" />
+    <property name="app.version" value="0.8.0" />
 
     <!-- The base directory for distribution targets -->
     <property name="dist.dir" value="dist/" />
@@ -137,6 +137,10 @@ limitations under the License.
         <jar jarfile="${dist.dir}/${app.jar}"
              basedir="${build.target}" >
         	<exclude name="**/*.html"/>
+          <manifest>
+              <attribute name="Main-Class" value="net.mojodna.searchable.solr.SchemaGenerator"/>
+              <attribute name="Class-Path" value="lib/jdom-1.0.jar lib/commons-beanutils-1.7.0.jar lib/commons-lang-2.1.jar lib/commons-collections-3.1.jar lib/log4j-1.2.9.jar lib/lucene-core-2.0.0.jar"/>
+          </manifest>
     	</jar>
     </target>
 </project>
