--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.mojodna</groupId>
   <artifactId>searchable</artifactId>
-  <version>0.8.0</version>
+  <version>0.8.0-SNAPSHOT</version>
   <description>Annotation-driven indexing and searching with Lucene and Solr</description>
   <build>
     <plugins>
